<!-- fragment_prompt_height.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prompt_height"
    android:layout_width="320dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/newGoal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Steps for New Goal"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:visibility="visible" />

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:text="@string/confirm" />

</LinearLayout>