...
    <string name="invalidStep">Steps must be between 0(exclusive) and 10000(inclusive)</string>
    <string name="displaySteps">Steps Taken</string>
    <string name="displayGoal">Current Goal</string>
    <string name="setGoalPrompt">Set a New Step Goal</string>
    <string name="congratsPrompt">Congratulations!</string>
    <string name="newGoalPrompt">Set your new goal!</string>
    <string name="invalidGoal">Please enter a valid goal.</string>
    <string name="re_enter_height">Re-enter Height</string>
    <string name="show_stride_length">Show Stride Length</string>
    <string name="steps_will_be_shown_here">Steps will be shown here</string>
    <string name="update_steps">update steps</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="congrats">You achieved your goal!\nDo you want to set a new goal?</string>
    <string name="suggested">Suggested:</string>
    <string name="customed">Customed:</string>
    <string name="progressLeft">Steps Left</string>
    <string name="prevSession">Active Data</string>
    <string name="user_profile">User Profile</string>
    <string name="choose_stats">Choose Stats</string>
    <string name="chat">Chat</string>
    <string name="stats">Stats</string>
    <string name="OK">OK</string>
    <string name="time_elapsed">time elapsed</string>
    <string name="speed">speed</string>
    <string name="distance">distance</string>
    <string name="graphText">Tap on blue bar: display stats for active sessions of the day.\n\n\t\tTap on red bar: display stats from the rest of the day.</string>
    <string name="launchWeeklyStatsFailure">launchWeeklyStats fail:</string>
    <string name="launchWeeklyStatsSuccess">launchWeeklyStats success</string>
...
