...
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/btnSetGoal"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/small_btn_background"
                        android:fontFamily="@font/armata"
                        android:minHeight="40dip"
...

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textGoal"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/armata"
...
