<!-- fragment_prompt_height.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prompt_height"
    android:layout_width="320dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/congrats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/congrats"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/no"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/yes"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/suggestedGoal"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/suggested"
            android:textSize="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSuggested"
            android:layout_width="77dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:text="5500"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/customGoal"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/customed"
            android:textSize="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/newGoal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="New Goal"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="12dp"
            android:visibility="gone" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnCustomed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/confirm"
        android:visibility="gone" />

</LinearLayout>